--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.9",
+    "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-query": "^5.69.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "i18n-iso-countries": "^7.14.0",
+    "msw": "^2.7.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
     "react-select": "^5.10.0"
   },
   "devDependencies": {
