--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.14.0",
+    "lucide-react": "^0.507.0",
     "mapbox-gl": "^3.11.0",
     "msw": "^2.7.3",
     "prop-types": "^15.8.1",
