--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.69.0",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.507.0",
