--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@react-google-maps/api": "^2.20.6",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.507.0",
@@ -26,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.0",
-    "react-select": "^5.10.0"
+    "react-select": "^5.10.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
