--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.69.0",
+    "@turf/turf": "^7.2.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
