--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.19.1",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.507.0",
     "mapbox-gl": "^3.11.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.22.0",
     "react-select": "^5.10.0",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
