--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^6.22.0",
     "react-select": "^5.10.0",
     "react-toastify": "^11.0.5",
