--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@turf/turf": "^7.2.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "country-list": "^2.3.0",
     "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.507.0",
