--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^6.22.0",
     "react-select": "^5.10.0",
+    "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1"
