--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "country-list": "^2.3.0",
     "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.14.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.507.0",
     "mapbox-gl": "^3.11.0",
     "msw": "^2.7.3",
