--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
